fixed z-index problems

--- a/src/css/joinUs.css
+++ b/src/css/joinUs.css
@@ -171,6 +171,7 @@
   position: fixed;
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
+  z-index: 90;
 }
 
 .logo_div {
